# aws-glue-workflow-analyzer

./: .pre-commit-config.yaml  Makefile  mkdocs.yml  setup.cfg
.github/workflows/: deploy.yml  test_and_check.yaml
aws_glue_workflow_analyzer/: __main__.py  cli.py  exceptions.py  logger.py  output.py  paginator.py
aws_glue_workflow_analyzer/analyzer/: aws_client.py  details_collector.py  error_retriever.py  run_retriever.py  table_analyzer.py  workflow.py
docs/: README.md  gen_ref_pages.py
requirements/: all.txt  test.txt
tests/: test_cli.py  test_exceptions.py  test_main.py  test_output.py  test_paginator.py
tests/analyzer/: test_aws_client.py  test_details_collector.py  test_error_retriever.py  test_run_retriever.py  test_table_analyzer.py  test_workflow.py
