[metadata]
name = aws-glue-workflow-analyzer
version = file: version.txt
author = Victor Mariano Leite
author_email = marianoleite44@gmail.com
home_page = https://github.com/victor-mariano-leite/aws-glue-workflow-analyzer
long_description = file: docs/README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    boto3==1.33.*
    moto==4.2.*
    pytest==7.4.*
    rich[all]==13.7.*
    pytest-mock
    pytest-cov
    pyparsing
include_package_data=True

[entry_points]
console_scripts =
    gwfa = aws_glue_workflow_analyzer.__main__:main

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4
exclude=__init__.py

[mypy]
files=aws_glue_workflow_analyzer
ignore_missing_imports=true
